--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run start:dev",
-    "start:dev": "nodmeon server.js",
+    "start:dev": "nodemon server.js",
     "start:prod": "cross-env NODE_ENV=production node server.js"
   },
   "repository": {
